# pitchplay

./: .gitignore  CMakeLists.txt  README.md  config_build.ps1
src/: header.h  imager.cpp  imager.h  main.cpp  mainwin.cpp  mainwin.h  player.cpp  player.h
